--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,10 @@ services:
         build:
             context: ./
         entrypoint: ["go", "test", "./..."]
+
+    localstack:
+        image: localstack/localstack
+        environment:
+            SERVICES: "s3"
+        ports:
+            - 4572:4572
