Save event to s3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     mpserver:
         build:
             context: ./
+        environment:
+            S3_ENDPOINT: "http://localstack:4572"
         env_file: .env
         ports:
             - 8091:80
