--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,8 @@
 #   go-tests = true
 #   unused-packages = true
 
+[metadata.heroku]
+  root-package = "github.com/j4y_funabashi/inari-micropub"
 
 [[constraint]]
   name = "github.com/gorilla/mux"
