--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
         build:
             context: ./
         environment:
+            INTEGRATION_TEST: "1"
             TOKEN_ENDPOINT: "http://token_mock" ## used to validate tokens
             MEDIA_ENDPOINT: "http://mpserver/media" ## used for q=config
             S3_ENDPOINT: "http://localstack:4572" ## DEV
