--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,7 @@
+
 # Gopkg.toml example
 #
-# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
+# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
 # for detailed Gopkg.toml documentation.
 #
 # required = ["github.com/user/thing/cmd/thing"]
@@ -16,18 +17,38 @@
 #   source = "github.com/myfork/project2"
 #
 # [[override]]
-#   name = "github.com/x/y"
-#   version = "2.4.0"
-#
-# [prune]
-#   non-go = false
-#   go-tests = true
-#   unused-packages = true
+#  name = "github.com/x/y"
+#  version = "2.4.0"
 
-[metadata.heroku]
-  root-package = "github.com/j4y_funabashi/inari-micropub"
-  install = [ "./cmd/..."]
 
-[prune]
-  go-tests = true
-  unused-packages = true
+[[constraint]]
+  name = "github.com/aws/aws-sdk-go"
+  version = "1.25.43"
+
+[[constraint]]
+  name = "github.com/gorilla/mux"
+  version = "1.7.3"
+
+[[constraint]]
+  name = "github.com/lib/pq"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/matryer/is"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/microcosm-cc/bluemonday"
+  version = "1.0.2"
+
+[[constraint]]
+  branch = "go1"
+  name = "github.com/rwcarlsen/goexif"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/sirupsen/logrus"
+  version = "1.4.2"
